--- a/css/main.scss
+++ b/css/main.scss
@@ -64,7 +64,7 @@ html, body {
     text-align: center;
 
     img {
-      width: 90px;
+      width: 150px;
       text-align: center;
       margin: 0 auto;
       filter: grayscale(100%)
@@ -73,7 +73,7 @@ html, body {
 
   h1 {
     display: block;
-    margin: 200px auto 0 auto;
+    margin: 250px auto 0 auto;
     line-height: 1.5;
 
     color: $black;
@@ -94,7 +94,8 @@ html, body {
     // goldilocks == ipad
     @include breakpoint(goldilocks) {
       margin: 320px auto 0 auto !important;
-      word-spacing: 10rem;
+      font-size: 3.7rem;
+      /* word-spacing: 10rem; */
       &:after {
         visibility: hidden;
         animation: none;
