Add custom domain and redirect

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- redirect to join page until the whole site is finished -->
+    <!-- if you're reading this... great! Send me a message about helping out! -->
+    <script>
+      if (window.location.hostname == "ohioindivisible.org") {
+        window.location.href = "http://join.ohioindivisible.org";
+      }
+    </script>
+
     <title>{{ page.title }}</title>
     <meta charset="UTF-8">
     <meta name="description" content="Information on Ohio Progressives.">
